Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-82890

SequentialAnimation does not stop when loops: Animation.Infinite and alwaysRunToEnd: true

XMLWordPrintable

    • Android, Linux/X11

      The code below on started doesn't stop(), complete() or running = false.
      alwaysRunToEnd must be false or the loops do not be Infinite (but it will loop the specified number), which doesns't make for a smooth transition.

      This might be fixed but I did not find a bug report and could not test on a newer Qt version.

             SequentialAnimation {
                      id: seqAnim
                      loops: Animation.Infinite
                      alwaysRunToEnd: true
                      OpacityAnimator {
                          target: whiteRect;
                          from: 1;
                          to: 0.6;
                          duration: 200
                      }
                      OpacityAnimator {
                          target: whiteRect;
                          from: 0.6;
                          to: 1;
                          duration: 200
                      }
                      // disable alwaysRunToEnd and this for workaround
                      onStopped: whiteRect.opacity = 1
                  }
      

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            piotrmi Piotr Mikolajczyk
            dantti Daniel Nicoletti
            Votes:
            1 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes