Fix alwaysRunToEnd==true prevented complex Anim from stopping

AnimatorProxyJob would not forward loopCount to the controlled job causing
the sequential or parallel animation to go infinitely after attempt to stop

Task-number: QTBUG-82890
Change-Id: I6a1ca787f06789064e05407bbe9ae5e5861f24d5
Reviewed-by: Ulf Hermann <ulf.hermann@qt.io>
(cherry picked from commit d66d0540dc323e6a536b952acedcfda70cd90c0c)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>