tests/auto/quick/qquickanimations/qquickanimations.pro
@@ -12,6 +12,7 @@ QT += core-private gui-private  qml-private quick-private testlib qmlmodels-priv
 DEFINES += QT_DISABLE_DEPRECATED_BEFORE=0
 
 OTHER_FILES += \
+    data/alwaysRunToEndInSequentialAnimationBug.qml \
     data/animationJobSelfDestructionBug.qml\
     data/attached.qml \
     data/badproperty1.qml \
